# mcp-things3

./: .gitignore  README.md  pyproject.toml
src/mcp_server_things3/: applescript_handler.py  server.py
